2005-09-21  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-gui.c:

	Fix compile warnings.

2005-09-21  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyUtils.cpp:
	* embed/print-dialog.c: (ephy_print_do_print_idle_cb):

	Don't use "cat >" as output command, it fails inpredicably.
	Instead, use the tempfile setting, and set "PostScript/default"
	as printer name. fflush before printing the temp file
	using gnome-print. If not using gecko 1.9, translate the paper
	name to the one mozilla expects (mozilla bug 
	https://bugzilla.mozilla.org/show_bug.cgi?id=307404).

2005-09-21  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-gui.c: (ephy_gui_check_location_writable):
	* lib/ephy-gui.h:

	New function to check the filename/directory for writability,
	derived from the now removed ephy_gui_confirm_overwrite_file.
	
	* src/bookmarks/ephy-bookmarks-editor.c:
	* embed/mozilla/FilePicker.cpp:
	* embed/mozilla/ContentHandler.cpp:
	* embed/mozilla/EphyHeaderSniffer.cpp:

	Use the filechooser's stock confirm-overwrite checking, but
	we still need our own writability check.

2005-09-19  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-embed.h:
	* embed/mozilla/mozilla-embed.cpp:

	Add EPHY_EMBED_STATE_RESTORING and conversion from
	GTK_MOZ_EMBED_FLAG_RESTORING.

2005-09-19  Christian Persch  <chpe@cvs.gnome.org>

	* data/mime-types-permissions.xml:

	Add another mime alias.

2005-09-19  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-window.c: (_ephy_window_set_context_event),
	(_ephy_window_unset_context_event), (embed_popup_deactivate_cb),
	(show_embed_popup), (ephy_window_dispose):
	* src/ephy-window.h:

	Make the methods to unset/release the context event semi-public.

2005-09-16  Raphael Slinckx  <rslinckx@cvs.gnome.org>

	* src/bookmarks/ephy-bookmark-action.c:
	(bookmark_activate_with_flags), (open_in_tab_activate_cb),
	(open_in_window_activate_cb), (activate_cb):
	* src/bookmarks/ephy-bookmarks.c: (impl_resolve_address):