@@ -113,7 +113,6 @@ static void ephy_cookie_manager_iface_init	(EphyCookieManagerIface *iface);
 static void ephy_password_manager_iface_init	(EphyPasswordManagerIface *iface);
 static void ephy_permission_manager_iface_init	(EphyPermissionManagerIface *iface);
 static void mozilla_embed_single_init		(MozillaEmbedSingle *ges);
-static gboolean have_gnome_url_handler		(const gchar *protocol);
 
 static GObjectClass *parent_class = NULL;
 
@@ -401,30 +400,6 @@ mozilla_init_profile (void)
 					 NULL);
         gtk_moz_embed_set_profile_path (profile_path, MOZILLA_PROFILE_NAME);
         g_free (profile_path);
-}
-
-static gboolean
-have_gnome_url_handler (const gchar *protocol)
-{
-	gchar *key, *cmd;
-	gboolean rv;
-
-	key = g_strdup_printf ("/desktop/gnome/url-handlers/%s/command", 
-			       protocol);
-	cmd = eel_gconf_get_string (key);
-	g_free (key);
-
-	rv = (cmd != NULL && strstr (cmd, "epiphany") == NULL);
-	g_free (cmd);
-
-	if (!rv) return rv;
-
-	key = g_strdup_printf ("/desktop/gnome/url-handlers/%s/enabled", 
-			       protocol);
-	rv = eel_gconf_get_boolean (key);
-	g_free (key);
-
-	return rv;
 }
 
 #if defined(MOZ_NSIXULCHROMEREGISTRY_SELECTSKIN) || defined(HAVE_CHROME_NSICHROMEREGISTRYSEA_H)
