@@ -1,3 +1,9 @@
+2005-09-21  Jean-François Rameau  <jframeau@cvs.gnome.org>
+
+	* embed/mozilla/mozilla-embed-single.cpp: (have_gnome_url_handler):
+
+	Remove unused function.
+
 2005-09-21  Christian Persch  <chpe@cvs.gnome.org>
 
 	* lib/ephy-gui.c:
